src/tests/fixtures/preprocessor/errors/error8.cpp
#define boo(a) a
int foo boo(
    132151
  )

